# explocode

./: .gitignore  README.md  package.json  pyrightconfig.json
fastapi-demo/: .env.example  ARCHITECTURE.md  GRPC.md  Makefile  README.md  SERVICE_DISCOVERY.md  TODO.md  docker-compose.yml
fastapi-demo/scripts/: generate_proto.sh
fastapi-demo/services/a/: Dockerfile  requirements.txt
fastapi-demo/services/order-service/: Dockerfile  requirements.txt
fastapi-demo/services/user-service/: Dockerfile  (+1 more)
multi-agent-demo/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
multi-agent-demo/docs/: AGENTS.md  API.md  ARCHITECTURE.md  BUILD_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  MEMORY.md
multi-agent-demo/docs/plans/: 2026-06-04-manus-agent-plan.md
multi-agent-demo/manus_agent/: __init__.py  cli.py
multi-agent-demo/manus_agent/agents/: __init__.py  base.py  executor.py  planner.py  researcher.py  writer.py
multi-agent-demo/manus_agent/config/: __init__.py  settings.py
multi-agent-demo/manus_agent/core/: __init__.py  graph.py  messages.py  state.py  supervisor.py
multi-agent-demo/manus_agent/llm/: __init__.py  factory.py  mock.py
multi-agent-demo/manus_agent/memory/: __init__.py  artifacts.py  store.py
multi-agent-demo/manus_agent/tools/: __init__.py  search.py
multi-agent-demo/tests/: conftest.py  test_artifacts.py  test_memory_store.py  test_search.py  test_supervisor.py  test_workflow.py
multi-agent-demo/tools/: auto_commit.py  commit_batch.py  more_commits.py  run_atomic_commits.sh
(+31 files in other folders)
